Closed Bug 545097 Opened 15 years ago Closed 15 years ago

[webgl] crash [@strstr] [@nsGLPbufferGLX::Init] on Sun Ray client

Categories

(Core :: Graphics: CanvasWebGL, defect)

x86
Solaris
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

--- called from signal handler with signal 11 (SIGSEGV) --- fc30fbd4 strstr (0, fe05aaeb, 8045178, fd24a146) + 2c fd24a17f int nsGLPbufferGLX::Init(mozilla::WebGLContext*) (f3008400, f2ce7100, 80451b4, fd239792) + 3ff We need a null check here.
Attached patch null checkSplinter Review
Assignee: nobody → ginn.chen
Status: NEW → ASSIGNED
Attachment #426198 - Flags: review?(vladimir)
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Crash Signature: [@strstr] [@nsGLPbufferGLX::Init]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: