Bug 545097 [webgl] crash [@strstr] [@nsGLPbufferGLX::Init] on Sun Ray client r=vladimir